# python-home-assignements

./: .gitignore  CLAUDE.md  STANDARDS.md  pyproject.toml
.claude/skills/new-py-assignment/: SKILL.md
assignments/palindrome-detector/: assignment.md
assignments/palindrome-detector-optimized/: assignment.md
assignments/palindrome-detector-optimized/docs/: DEBRIEF.md  DECISIONS.md  DESIGN.md  INTAKE.md  QUESTIONS.md
assignments/palindrome-detector-optimized/src/: palindrome.py
assignments/palindrome-detector-optimized/src/tests/: test_palindrome.py
assignments/palindrome-detector/docs/: DEBRIEF.md  DECISIONS.md  DESIGN.md  INTAKE.md  QUESTIONS.md
assignments/palindrome-detector/src/: palindrome.py
assignments/palindrome-detector/src/tests/: test_palindrome.py
assignments/shekel-converter/: assignment.md
assignments/shopping-list-manager/docs/: DESIGN.md
assignments/shopping-list-manager/src/: cli.py  main.py
assignments/shopping-list-manager/src/tests/: test_cli.py  test_shopping_list.py
assignments/working-hours-calculator/: assignment.md
assignments/working-hours-calculator/docs/: DECISIONS.md  DESIGN.md  INTAKE.md  QUESTIONS.md
assignments/working-hours-calculator/src/: shift_calculator.py
assignments/working-hours-calculator/src/tests/: test_shift_calculator.py
